--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,16 @@
         android:layout_height="wrap_content" />
 
     <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+        android:id="@+id/year_of_production"
+        android:padding="4dp"
+        android:paddingLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Rok produkcji"
+        app:met_floatingLabel="normal"
+        android:textColorHint="@color/colorGrey"/>
+
+    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
         android:id="@+id/engine_power_spinner"
         android:padding="4dp"
         android:paddingLeft="8dp"
@@ -68,18 +78,43 @@
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/minValue" />
-</RelativeLayout>
-
 
     <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-        android:id="@+id/door_amount_spinner"
-        android:hint="Liczba drzwi"
+        android:id="@+id/fuel_kind_spinner"
+        android:layout_toRightOf="@id/maxValue"
+        android:hint="Rodzaj paliwa"
         android:textColorHint="@color/colorGrey"
-        android:padding="4dp"
-        android:paddingLeft="8dp"
+        android:layout_alignParentRight="true"
+        android:paddingTop="18dp"
+        android:paddingRight="4dp"
+        android:paddingLeft="16dp"
         app:met_floatingLabel="normal"
-        android:layout_width="150dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content" />
+
+    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+        android:layout_below="@id/minValue"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:id="@+id/amortization_edit_text"
+        android:hint="Przebieg (tyś km)"
+        android:textColorHint="@color/colorGrey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner-->
+        <!--android:layout_below="@id/door_amount_spinner"-->
+        <!--android:layout_toRightOf="@id/amortization_edit_text"-->
+        <!--android:paddingTop="6dp"-->
+        <!--android:paddingLeft="24dp"-->
+        <!--android:id="@+id/year_edit_text"-->
+        <!--android:hint="Rok produkcji"-->
+        <!--android:textColorHint="@color/colorGrey"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+
+
+</RelativeLayout>
 
     <TextView
         android:paddingTop="16dp"
@@ -90,19 +125,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:paddingTop="16dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/seek_bar_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--<TextView-->
+        <!--android:paddingTop="16dp"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:id="@+id/seek_bar_text_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
 
-    <SeekBar
+    <RatingBar
         android:paddingTop="8dp"
-        android:paddingBottom="16dp"
-        android:id="@+id/safety_seek_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_gravity="center_horizontal"
+        android:numStars="5"
+        android:stepSize="0.1"
+        android:clickable="true"
+        android:id="@+id/safety_ranking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:isIndicator="true"/>
+
+    <!--<SeekBar-->
+        <!--android:paddingTop="8dp"-->
+        <!--android:paddingBottom="16dp"-->
+        <!--android:id="@+id/safety_seek_bar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/search"
@@ -113,6 +159,5 @@
         android:src="@android:drawable/ic_menu_search"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"/>
-
 
 </LinearLayout>
