--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -76,12 +76,6 @@
                             android:layout_height="wrap_content" />
                         <TextView
                             android:layout_below="@id/horse_power_text_view"
-                            android:text="Cena: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:layout_below="@id/horse_power_text_view"
                             android:id="@+id/prize_text_view"
                             android:text="Cena: "
                             android:textSize="12sp"
@@ -98,6 +92,20 @@
                             android:id="@+id/doors_amount_text_view"
                             android:layout_below="@id/safety_text_view"
                             android:text="Liczba drzwi: "
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/year_of_production_text_view"
+                            android:layout_below="@id/doors_amount_text_view"
+                            android:text="Rok produkcji: "
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/amortization_text_view"
+                            android:layout_below="@id/year_of_production_text_view"
+                            android:text="Przebieg: "
                             android:textSize="12sp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
