--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGrey">#757575</color>
     <color name="deppPurple">#673AB7</color>
+    <color name="ratingChoose">#a4a4a4</color>
+    <color name="ratingChosen">#ffff04</color>
 
 
 </resources>
