--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,7 +166,7 @@
 
     <TextView
         android:layout_below="@id/min_kilometers_done"
-        android:id="@+id/horse_power_text_view"
+        android:id="@+id/horse_power"
         android:padding="8dp"
         android:paddingLeft="12dp"
         android:text="Moc silnika:"
@@ -179,7 +179,7 @@
         android:hint="min hp"
         android:textColorHint="@color/colorGrey"
         android:padding="8dp"
-        android:layout_below="@id/horse_power_text_view"
+        android:layout_below="@id/horse_power"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:inputType="number"/>
@@ -190,7 +190,7 @@
         android:textColorHint="@color/colorGrey"
         android:padding="8dp"
         android:layout_width="150dp"
-        android:layout_below="@id/horse_power_text_view"
+        android:layout_below="@id/horse_power"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/min_horse_power"
         android:inputType="number"/>
