--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -1,139 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.arek.swdahp.ScoresActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".ScoresActivity"
+    tools:showIn="@layout/activity_main">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
 
-        <android.support.v7.widget.CardView
-            android:background="@color/deppPurple"
-            android:id="@+id/cardRow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp">
-
-                <android.support.v7.widget.CardView
-                    android:paddingRight="8dp"
-                    android:id="@+id/rank_and_image_card_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/rank_text_view"
-                        android:text="90/100"
-                        android:textSize="26sp"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/example_car_icon"
-                        android:paddingTop="16dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_below="@id/rank_text_view"
-                        android:layout_marginTop="32dp"
-                        android:layout_marginRight="16dp"
-                        android:background="@drawable/examplecar"
-                        />
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:background="@color/deppPurple"
-                    android:layout_marginLeft="8dp"
-                    android:id="@+id/specification_card_view"
-                    android:layout_toRightOf="@id/rank_and_image_card_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="148dp">
-
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/fuel_combustion"
-                            android:text="Spalanie: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:id="@+id/horse_power_text_view"
-                            android:layout_below="@id/fuel_combustion"
-                            android:text="Moc: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:layout_below="@id/horse_power_text_view"
-                            android:id="@+id/prize_text_view"
-                            android:text="Cena: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:id="@+id/safety_text_view"
-                            android:layout_below="@id/prize_text_view"
-                            android:text="Bezpieczeństwo: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:id="@+id/doors_amount_text_view"
-                            android:layout_below="@id/safety_text_view"
-                            android:text="Liczba drzwi: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:id="@+id/year_of_production_text_view"
-                            android:layout_below="@id/doors_amount_text_view"
-                            android:text="Rok produkcji: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                        <TextView
-                            android:id="@+id/amortization_text_view"
-                            android:layout_below="@id/year_of_production_text_view"
-                            android:text="Przebieg: "
-                            android:textSize="12sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                    </RelativeLayout>
-
-
-                </android.support.v7.widget.CardView>
-
-
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:id="@+id/exercise_name"-->
-                    <!--android:layout_alignParentTop="true"-->
-                    <!--android:textSize="30sp"-->
-                    <!--android:text="some"-->
-                    <!--/>-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:id="@+id/exercise_data"-->
-                    <!--android:layout_below="@+id/exercise_name"-->
-                    <!--android:text="dummy text"-->
-                    <!--/>-->
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
 </LinearLayout>
